<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetAnnotations"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    android:paddingBottom="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/topSeparator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/medium_grey" />

    <LinearLayout
        android:id="@+id/llNoAnnotations"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="58dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/topSeparator"
        app:layout_constraintBottom_toBottomOf="parent" >

        <TextView
            android:id="@+id/no_annotations_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/no_annotations_title"/>

        <TextView
            android:id="@+id/no_annotations_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="normal"
            android:text="@string/no_annotations_description"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAnnotations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="58dp"
        app:layout_constraintTop_toBottomOf="@id/topSeparator"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/llLeftArrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/rvAnnotations"
        app:layout_constraintBottom_toBottomOf="@id/rvAnnotations"
        app:layout_constraintEnd_toStartOf="@id/rvAnnotations"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRightArrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/rvAnnotations"
        app:layout_constraintBottom_toBottomOf="@id/rvAnnotations"
        app:layout_constraintStart_toEndOf="@id/rvAnnotations"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>