<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/optionEdit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit" />
    <item
        android:id="@+id/optionDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />
</menu>